# kitchen

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  todo.md
.github/workflows/: gh-pages.yml
crate/: .gitignore
crate/src/: kitchen.rs  lib.rs  util.rs
crate/src/chef/: color.rs  mod.rs
crate/src/ingredients/: mod.rs
migrations/: 0000_last_kat_farrell.sql
migrations/meta/: 0000_snapshot.json  _journal.json
site/: .prettierignore  netlify.toml  package-lock.json  package.json  rollup.config.js  svelte.config.js  todo.md  tsconfig.json
site/prisma/: schema.prisma
site/src/: Dish.svelte  Restaurant.svelte  additional-svelte-jsx.d.ts  app.html  index.html  index.ts  ingredientNode.ts  restaurant.svelte  restaurant.ts  styles.scss  utils.ts
site/src-tauri/: tauri.conf.json
site/src-tauri/icons/: icon.icns
site/src/cable/: Cable.svelte
site/src/common/: useAction.ts  utils.ts
site/src/connections/: Cable.svelte  Connections.svelte  LiveConnection.svelte  connections.ts  live-connection.ts
site/src/controls/: color-control.ts  common.ts  index.ts  pierogi-control.ts
site/src/cursor-circle/: CursorCircle.svelte
site/src/docks/: Dock.svelte
site/src/ingredients/: color.ts  ingredients.ts  pierogi.ts  plate.ts
site/src/lib/: Dish.svelte  index.ts
site/src/nodes/: Node.svelte  PaneWrapper.svelte  nodes.ts
site/src/raw/: cable.ts  ingredientNode.ts  restaurant.ts
site/src/routes/: +layout.svelte  +page.svelte  __error.svelte  __layout.svelte  _recipe.ts  _shader.ts  index.svelte
site/src/svelte/: color-control.svelte  plate-control.svelte  restaurant.svelte  terminal-rack.svelte  terminal.svelte
site/src/terminal/: index.ts  terminal.ts
site/src/terminals/: Terminal.svelte  TerminalRack.svelte  terminals.ts
site/src/viewport/: viewport.ts
site/static/: styles.scss
src/: app.html  app.rs  kitchen.rs  lib.rs
src/chef/: pierogi.rs
src/components/: checkbox.rs  file_input.rs  mod.rs  select.rs  slider.rs
src/db/: schema.ts
src/ingredients/color/: color_2d.frag  mod.rs
src/ingredients/pierogi/: mod.rs
src/lib/common/: flavors.ts  types.ts
src/lib/components/: CursorCircle.svelte  Dock.svelte  DragHeader.svelte  Ingredient.svelte  Pan.svelte  Recipe.svelte
src/lib/css/: styles.css  theme.css
src/lib/state/: actions.ts  dispatcher.ts  index.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  _recipe.ts  mod.rs
src/routes/kitchen/: agents.rs  image.rs  mod.rs
static/: cable.ts  controls.ts  index.html  index.ts  ingredientNode.ts  nodes.ts  restaurant.ts  styles.scss  terminal.ts
static/controls/: color-control.ts  common.ts  index.ts  pierogi-control.ts  plate-control.ts  terminal.ts
(+297 files in other folders)
