[package]
authors = ["Kyle Moore <kyle@pierogis.live>"]
categories = ["wasm"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "pierogis-kitchen"
readme = "./README.md"
repository = "https://github.com/pierogis/kitchen.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
image = "0.23.14"
js-sys = "0.3.55"
log = "0.4"
serde = {version = "1.0.130", features = ["derive"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-logger = "0.2.0"
web-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
features = [
  'Attr',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'ImageData',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]
version = "0.3.55"
